<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chatroom_bg"
    tools:ignore="ExtraText">


    <TextView
        android:id="@+id/activity_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/enter_details"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fab_Done"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/chat_bubble_sent"
        android:clickable="true"
        android:fontFamily="@font/raleway_bold"
        android:text="DONE"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_userFname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/newuser_edit_text"
        android:contentDescription="@string/enter_fname"
        android:ems="10"
        android:hint="@string/enter_fname"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textAlignment="center"
        android:textColor="@color/slunk_purple"
        android:textColorHighlight="@color/slunk_purple"
        android:textColorHint="@color/slunk_purple"
        android:textColorLink="@color/slunk_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_name_tv" />

    <EditText
        android:id="@+id/et_userdispName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/newuser_edit_text"
        android:contentDescription="@string/enter_dispname"
        android:ems="10"
        android:hint="@string/enter_dispname"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textAlignment="center"
        android:textColor="@color/slunk_purple"
        android:textColorHint="@color/slunk_purple"
        android:textColorLink="@color/slunk_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_userLname" />

    <EditText
        android:id="@+id/et_userLname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/newuser_edit_text"
        android:contentDescription="@string/enter_lname"
        android:ems="10"
        android:hint="@string/enter_lname"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textAlignment="center"
        android:textColor="@color/slunk_purple"
        android:textColorHint="@color/slunk_purple"
        android:textColorLink="@color/slunk_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_userFname" />

    <RadioGroup
        android:id="@+id/rg_carerstat"
        android:layout_width="119dp"
        android:layout_height="63dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:checkedButton="@+id/rbtn_cared_for"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_carer_stat">

        <RadioButton
            android:id="@+id/rbtn_cared_for"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cared_for"
            android:textColor="@android:color/black"
            android:textColorHighlight="@color/slunk_purple"
            android:textColorLink="@android:color/holo_purple" />

        <RadioButton
            android:id="@+id/rbtn_carer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/carer"
            android:textColor="@android:color/black" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_carer_stat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/carer_stat_choose"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_userdispName" />

    <Switch
        android:id="@+id/sinchSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:switchPadding="10dp"
        android:text="Tap to get Offline"
        android:textOff="Offline"
        android:textOn="Online"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_carerstat" />

</android.support.constraint.ConstraintLayout>
